Fixed z-index on validation message.

--- a/Js/Ui/Components/FormGroup/styles.css
+++ b/Js/Ui/Components/FormGroup/styles.css
@@ -54,6 +54,7 @@
 .validationMessage {
 	transition: all 250ms;
 	position: absolute;
+	z-index: -1; /* so the message shows behind text area and code editor*/
 }
 
 .validationMessageHolder {
